--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.5.2",
     "nodemailer": "^6.7.8",
     "nodemailer-express-handlebars": "^5.0.0",
+    "nodemon": "^2.0.19",
     "twilio": "^3.80.1",
     "validator": "^13.7.0"
   }
