--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.2",
     "@mui/styles": "^5.10.2",
+    "@mui/x-data-grid": "^5.17.5",
     "@reduxjs/toolkit": "^1.8.5",
+    "@stripe/react-stripe-js": "^1.12.0",
+    "@stripe/stripe-js": "^1.38.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "country-state-city": "^3.1.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
@@ -24,7 +28,6 @@
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.4.2",
-    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
