--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.7.8",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.19",
+    "stripe": "^10.12.0",
     "twilio": "^3.80.1",
     "validator": "^13.7.0"
   }
