--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,25 +18,30 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "country-state-city": "^3.1.2",
     "history": "^5.3.0",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-chartjs-2": "^4.3.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.4.2",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4",
     "webfontloader": "^1.6.28"
   },
